Updated locking model surrounding orphan entity cleanup
- Added the cp_system_locks table to act as a basis for
  a system-wide read/write locking system
- Added AbstractHibernateCurator.getSystemLock for obtaining
  named locks backed by the database
- Removed the write locks on queries used by orphan entity
  cleanup and various product and content versioning operations
- Added use of system locks during refresh, product or content
  API endpoints, and the orphan entity cleanup job
- Updated the conflict spec test to ensure the orphan cleanup
  job actually completes successfully